--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'org.springframework.boot' version '2.4.2'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'org.unbroken-dome.test-sets' version '2.2.1'
     id 'java'
 }
 
@@ -32,3 +33,16 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+testSets {
+    integrationTest {
+        dirName = 'integration-test'
+    }
+}
+
+integrationTest {
+    useJUnitPlatform()
+    shouldRunAfter test
+}
+
+check.dependsOn(integrationTest)
